add  swagger file and fix bugs
